--- a/MultipleSideOutput/pom.xml
+++ b/MultipleSideOutput/pom.xml
@@ -21,7 +21,7 @@ under the License.
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>side-output-example</groupId>
+    <groupId>sideOutputExample</groupId>
     <artifactId>MultipleSideOutput</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
