--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps: 
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
 
       - name: Build and Test maven project
         uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
