--- a/.github/workflows/maven-build-and-test.yml
+++ b/.github/workflows/maven-build-and-test.yml
@@ -16,3 +16,4 @@ jobs:
         uses: trifork/cheetah-platform-examples/.github/actions/maven-build-and-test@main
         with: 
           settings-path: ./MergeTwoStreams/
+          PAT: ${{ secrets.PACKAGE_PAT }}
