Add all platform examples to test

--- a/.github/actions/maven-build-and-test/action.yml
+++ b/.github/actions/maven-build-and-test/action.yml
@@ -6,7 +6,7 @@ inputs:
     description: Path of maven settings file
     required: true
   PAT:
-    description: Personal access token
+    description: Personal access token to access external dependencies 
     required: true
 
 runs:
