--- a/.github/workflows/componet-test.yml
+++ b/.github/workflows/componet-test.yml
@@ -8,8 +8,8 @@ env:
   IMAGE_REGISTRY: ghcr.io
   JAR_NAME_PATTERN: cheetah-*.jar # entrypoint assembly name
   FLINK_IMAGE_VERSION: 1.16.1
-  BASE_IMAGE: Dockerfile
-  CONTEXT: ./FlinkStates/
+  BASE_IMAGE: ./FlinkStates/Dockerfile
+  CONTEXT: .
 
 
 jobs:
