--- a/MergeTwoStreams/docker-compose.yaml
+++ b/MergeTwoStreams/docker-compose.yaml
@@ -12,6 +12,9 @@ services:
       KAFKA__CLIENTID: ClientId
       KAFKA__CLIENTSECRET: 1234
       KAFKA__AUTHENDPOINT: http://cheetahoauthsimulator/oauth2/token
+    depends_on:
+      mergetwostreams-job:
+        condition: service_healthy
 
   mergetwostreams-job:
     image: ${DOCKER_REGISTRY-}mergetwostreams-job
@@ -47,6 +50,11 @@ services:
       - mergetwostreams-job-taskmanager
     volumes:
       - flink:/checkpoints
+    healthcheck:
+      test: curl mergetwostreams-job:8081 || exit -1
+      interval: 1s
+      timeout: 10s
+      retries: 10
 
   mergetwostreams-job-taskmanager:
     image: ${DOCKER_REGISTRY-}mergetwostreams-job
