--- a/ExtanalLookup/docker-compose.yaml
+++ b/ExtanalLookup/docker-compose.yaml
@@ -48,6 +48,11 @@ services:
       - externallookup-job-taskmanager
     volumes:
       - flink:/checkpoints
+    healthcheck:
+      test: curl localhost:8081/jobs | grep -q '"status":"RUNNING"' || exit -1
+      interval: 1s
+      timeout: 1s
+      retries: 30
 
   externallookup-job-taskmanager:
     image: ${DOCKER_REGISTRY-}externallookup-job
