--- a/FlinkStates/docker-compose.yaml
+++ b/FlinkStates/docker-compose.yaml
@@ -50,6 +50,11 @@ services:
       - flinkstates-taskmanager
     volumes:
       - flink:/checkpoints
+    healthcheck:
+      test: curl localhost:8081/jobs | grep -q '"status":"RUNNING"' || exit -1
+      interval: 1s
+      timeout: 1s
+      retries: 30
 
   flinkstates-taskmanager:
     image: ${DOCKER_REGISTRY-}flinkstates-job
