--- a/MergeTwoStreams/docker-compose.yaml
+++ b/MergeTwoStreams/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
     volumes:
       - flink:/checkpoints
     healthcheck:
-      test: curl mergetwostreams-job:8081/taskmanagers/metrics | grep -q -v '^\[\]$' || exit -1
+      test: curl localhost:8081/jobs | grep -q '"status":"RUNNING"' || exit -1
       interval: 1s
       timeout: 1s
       retries: 30
