--- a/TumblingWindow/docker-compose.yaml
+++ b/TumblingWindow/docker-compose.yaml
@@ -47,6 +47,11 @@ services:
       - tumblingwindow-job-taskmanager
     volumes:
       - flink:/checkpoints
+    healthcheck:
+      test: curl localhost:8081/jobs | grep -q '"status":"RUNNING"' || exit -1
+      interval: 1s
+      timeout: 1s
+      retries: 30
 
   tumblingwindow-job-taskmanager:
     image: ${DOCKER_REGISTRY-}tumblingwindow-job
