--- a/.github/workflows/componet-test.yml
+++ b/.github/workflows/componet-test.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Merge Two Streams example image and run component test
-        uses: .github/actions/component-test
+        uses: ./.github/actions/component-test
         with:
           context-path: ./MergeTwoStreams/
           PAT: ${{ secrets.PACKAGE_PAT }}
