--- a/FlinkStates/docker-compose.yaml
+++ b/FlinkStates/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
       standalone-job
       --job-classname cheetah.example.job.FlinkStatesJob
       --kafka-bootstrap-servers kafka:19092
+      --kafka-group-id MergeTwoStreams-group-id
+      --kafka-security-protocol SASL_PLAINTEXT
       --input-kafka-topic FlinkStatesInputTopic
       --output-kafka-topic-value FlinkStatesOutputTopic-value
       --output-kafka-topic-reducing FlinkStatesOutputTopic-reducing
