Update observability  example

--- a/Observability/docker-compose.yaml
+++ b/Observability/docker-compose.yaml
@@ -32,6 +32,8 @@ services:
       --kafka-bootstrap-servers kafka:19092
       --input-kafka-topic ObservabilityInputTopic
       --output-kafka-topic ObservabilityOutputTopic
+      --kafka-group-id Observability-group-id
+      --kafka-security-protocol SASL_PLAINTEXT
     environment:
       KAFKA_CLIENT_ID: ClientId
       KAFKA_CLIENT_SECRET: 1234
