--- a/ExternalLookup/pom.xml
+++ b/ExternalLookup/pom.xml
@@ -22,7 +22,7 @@ under the License.
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Externallookup</groupId>
-    <artifactId>Extanallookup</artifactId>
+    <artifactId>ExternalLookup</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -78,7 +78,7 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>3.0.0</version>
+            <version>3.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
