--- a/FlinkStates/docker-compose.yaml
+++ b/FlinkStates/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       standalone-job
       --job-classname cheetah.example.job.FlinkStatesJob
       --kafka-bootstrap-servers kafka:19092
-      --kafka-group-id MergeTwoStreams-group-id
+      --kafka-group-id FlinkStates-group-id
       --kafka-security-protocol SASL_PLAINTEXT
       --input-kafka-topic FlinkStatesInputTopic
       --output-kafka-topic-value FlinkStatesOutputTopic-value
